2008.Dec.16 (svn.debian.org/tux4kids - revision 812)
        Code - some work on mathcards.c to check for indeterminate questions
          and to use the "comprehensive" method whenever multiple-operand
          questions are not needed, such as the "Math Command Training
          Academy" lessons. Fixed bug in add_all_valid() that was due to
          the end_of_list arg actually needing to be doubly indirect.

        Lessons - updated all "Math Command Training Academy" lesson files
          to make sure all the needed parameters get reset properly between
          lessons.
        Graphics - new menu icons for "Factoroids" and "Fleet Missions"

        David Bruce <davidstuartbruce@gmail.com>

2008.Dec.11 (svn.debian.org/tux4kids - revision 796)
	Initial file reorganization to separate SDL-related code from more
	infrastructural code. This is intended to allow us to create and
	compile stand-alone programs that test specific functions (e.g.,
	generating problems for specific lessons).

	Tim Holy <holy@wustl.edu>
	
2008.Dec.08 (svn.debian.org/tux4kids - revision 788)
Version 1.7.0
        First post-Google Summer of Code release with numerous enhancements.
        The changelog was not kept updated very well over the summer, although
        most of the changes had descriptive commit messages in subversion.
        To summarize the most important changes and their contributors:
          - Fullscreen support at native resolution (Brendan Luchen).
          - Overhaul of mathcards question-generation code with support
            for multiple-operand questions (Brendan Luchen).
          - Turn-based multiplayer mode (Brendan Luchen).
          - Redo of Credits screen to allow i18n (Brendan Luchen).
          - Very humorous menu-screen Easter egg (Brendan Luchen).
          - Factoroids factor game activity (Jesus Mager, based on Bill
            Kendricks' "Vectoroids").
          - New Irish (Seanán Ó Coistín) and Turkish (Doruk Fisek)